Reestruturando algumas informações + criando serviço de email + adicionando configurações no json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"JwtKey": "yRQYnWzskCZUxPwaQupWkiUzKELZ49eM7oWxAQK_ZXw",
+	"ApiKeyName": "api_key",
+	"ApiKey": "curso_api_IlTevUmz0ey3NwCVunWg",
+	"Smtp": {
+		"Host": "smtp.sendgrid.net",
+		"Port": "587",
+		"UserName": "apikey",
+		"Password": "PassSendGrid@2023"
+	},
+
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
