Finalizando projeto adicionando swagger e configurando corretamente a connectionstring

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=localhost;Database=Blog2;Trusted_Connection=True;TrustServerCertificate=true"
+	},
 	"JwtKey": "yRQYnWzskCZUxPwaQupWkiUzKELZ49eM7oWxAQK_ZXw",
 	"ApiKeyName": "api_key",
 	"ApiKey": "curso_api_IlTevUmz0ey3NwCVunWg",
